@@ -32,6 +32,7 @@ Misc:
  - PSP2: Use system font for menus
  - All: Faster memory read/write
  - Qt: Make audio channel/video layer options shortcut mappable
+ - GBA Memory: Optimize stalling behavior
 
 0.4.1: (2016-07-11)
 Bugfixes:
